# ai-book-backend

./: .gitignore  DEPLOYMENT.md  README.md  Readme.md  main.py  pyproject.toml  render.yaml  requirements.txt  space.yaml
app/: main.py
app/agent/: agent.py  tools.py
app/db/: qdrant_client.py
app/rag/: rag.py
history/prompts/general/: 170420251208000000-push-backend-to-new-github-repo.general.prompt.md
